templates updated a styles added

--- a/04-url-shortener/templates/not_found.html
+++ b/04-url-shortener/templates/not_found.html
@@ -31,6 +31,11 @@
       color: #f1f1f1;
     }
 
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+
     label {
       display: block;
       margin-bottom: 10px;
@@ -70,7 +75,7 @@
   <div class="container">
     <h3>404</h1>
       <h1>Page not found</h1>
-      <a href="/" class="button">Back to home</a>
+      <a href="/" class="button" style="font-weight: 600;">← Back to home</a>
   </div>
 
 </body>
